--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation "com.google.accompanist:accompanist-placeholder-material:0.30.1"
+
 
 
     testImplementation 'junit:junit:4.13.2'
