--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,22 @@
 buildscript {
+
+    repositories {
+        maven {
+            url 'https://storage.googleapis.com/r8-releases/raw'
+        }
+    }
+
     ext {
         compose_version = '1.4.0-rc01'
     }
+
+    dependencies {
+        classpath 'com.android.tools:r8:8.0.40'// Must be before the Gradle Plugin for Android.
+        classpath 'com.android.tools.build:gradle:7.4.2' // Your current AGP version.
+
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
